syntax = "proto3";

option go_package = "generated/proto";

package broker;

service Broker {
  rpc Publish(PublishRequest) returns (PublishResponse);
  rpc Subscribe(SubscribeRequest) returns (stream Message);
  rpc DeclareExchange(DeclareExchangeRequest) returns (DeclareExchangeResponse);
  rpc DeclareQueue(DeclareQueueRequest) returns (DeclareQueueResponse);
  rpc AckMessage(AckMessageRequest) returns (AckMessageResponse);
  rpc NackMessage(NackMessageRequest) returns (NackMessageResponse);
}

message PublishRequest {
  string exchange = 1;
  string routing_key = 2;
  string payload = 3;
}

message PublishResponse {
  bool success = 1;
}

message SubscribeRequest {
  string exchange = 1;
  string queue = 2;
}

message Message {
  string id = 1;
  string payload = 2;
}

message DeclareExchangeRequest {
  string exchange = 1;
  ExchangeType type = 2;
}

enum ExchangeType {
  DIRECT = 0;
  FANOUT = 1;
  TOPIC = 2;
}

message DeclareExchangeResponse {
  bool success = 1;
}

message DeclareQueueRequest {
  string queue = 1;
  string exchange = 2;
  QueueType type = 3;
}

enum QueueType {
  NORMAL = 0;
  DURABLE = 1;
}

message DeclareQueueResponse {
  bool success = 1;
}

message AckMessageRequest {
  string message_id = 1;
  string queue = 2;
  string exchange = 3;
}

message AckMessageResponse {
  bool success = 1;
}

message NackMessageRequest {
  string message_id = 1;
  string queue = 2;
  string exchange = 3;
  bool requeue = 4; // If true, the message will be re-queued
}

message NackMessageResponse {
  bool success = 1;
}